[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/AUDIO/music/main_music.ogg" type="AudioStream" id=1]
[ext_resource path="res://assets/AUDIO/music/main_menu_music.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/AUDIO/music/boss_stone_golem_music.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/AUDIO/music/boss_heart_horder_music.ogg" type="AudioStream" id=4]
[ext_resource path="res://GlobalMusic.gd" type="Script" id=5]

[node name="GlobalMusic" type="Node2D"]
script = ExtResource( 5 )

[node name="IdleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -10.0

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -20.0

[node name="BossStoneGolemMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="BossHeartHorderMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
